# llm-arena-vram-calc

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: update-leaderboard.yml
arena_enrichment/: README.md  enrich_arena.py  known_models.py  requirements.txt  vram_calculator.py
arena_enrichment/output/: arena_leaderboard_enriched.csv  arena_leaderboard_enriched.xlsx
arena_enrichment/scrapers/: aa_resolver.py  arena_scraper.py  hf_resolver.py
tests/: conftest.py  test_aa_resolver.py  test_enrich_arena.py  test_integration.py  test_known_models.py  test_vram_calculator.py
tests/fixtures/: aa_cache_sample.json
