[project]
name = "llm-arena-vram-calc"
version = "1.0.0"
description = "Enriches the Arena.ai open-source LLM leaderboard with VRAM estimates for single-GPU deployment"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Kshitij Vaidya" }]

[project.urls]
Repository = "https://github.com/KayKv10/llm-arena-vram-calc"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["arena_enrichment"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "types-requests>=2.32.4.20260107",
    "types-beautifulsoup4>=4.12.0.20250516",
]
